# dxfgeometry

./: LICENSE  README.md  parser.py  pyproject.toml
examples/: basic_usage.py
exception/: polygon_exception.py  reader_exception.py
geometry/: angle.py  arc.py  cad_layer.py  cad_result.py  circle.py  ellipse.py  hatch.py  line.py  ortho_hatch.py  ortho_polygon.py  point.py  polygon.py  polyline.py  text.py
json_geometry/: json_arc.py  json_cad_element.py  json_cad_layer.py  json_cad_result.py  json_circle.py  json_ellipse.py  json_hatch.py  json_line.py  json_ortho_hatch.py  json_ortho_polygon.py  json_point.py  json_polygon.py  json_polyline.py  json_text.py
src/dxfgeometry/: __init__.py  config.py  main.py  parser.py
src/dxfgeometry/exception/: line_exception.py
src/dxfgeometry/geometry/: __init__.py  angle.py  arc.py  cad_element.py  cad_layer.py  cad_result.py  circle.py  ellipse.py  hatch.py  line.py  ortho_hatch.py  ortho_polygon.py  point.py  polygon.py  polyline.py  text.py
src/dxfgeometry/json_geometry/: __init__.py  json_arc.py  json_base_class.py  json_cad_element.py  json_cad_layer.py  json_cad_result.py  json_circle.py  json_ellipse.py  json_hatch.py  json_line.py  json_ortho_hatch.py  json_ortho_polygon.py  json_point.py  json_polygon.py  json_polyline.py  json_text.py
src/dxfgeometry/util/: color.py  tools.py
util/: color.py  tools.py
