[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dxfgeometry"
version = "0.1.1"
description = "A tool for reading dxf files and parsing all primitives by layer classification"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

authors = [
    {name = "Chun Tsang", email = "zjun5566@163.com"}
]

keywords = ["dxf", "cad", "geometry", "architecture", "gis", "bim"]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: GIS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "ezdxf>=1.2.0,<2.0.0",
    "shapely>=2.0.4,<3.0.0",
]

[project.urls]
Homepage = "https://github.com/ChunnTsang/dxfgeometry"
Repository = "https://github.com/ChunnTsang/dxfgeometry"
"Bug Tracker" = "https://github.com/ChunnTsang/dxfgeometry/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/dxfgeometry"]